[package]
name = "bike-safety-orebro"
version = "0.1.0"
edition = "2021"

[dependencies]
osmpbfreader = "0.16"
geo = "0.28"
geojson = "0.24"
rstar = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
rayon = "1.10"
log = "0.4"
env_logger = "0.11"
